Fixes z-index issue for popup in relation to legend, layer toggle, and zoom controls

--- a/src/modules/cpal/explorer/Map/components/PopupContent.scss
+++ b/src/modules/cpal/explorer/Map/components/PopupContent.scss
@@ -1,5 +1,7 @@
 .popup-content {
   padding: 0.75rem 0.5rem 0.5rem;
   width: 250px;
-  z-index: 5000;
+}
+.mapboxgl-popup {
+  z-index: 5000 !important;
 }
